# dotfiles

./: .gitignore  .tmux.conf  .vimrc  .zsh_alias  .zsh_plugins.txt  .zshrc  CLAUDE.md  install.zsh  install_ttyd.zsh
code-server/: keybindings.json  settings.json
installers/: install_ttyd.zsh
scripts/: claude_global.md  claude_settings.json  gemini_settings.json  test_tg_hook.py  tg-hook
scripts/astra/: CHANGELOG.md  README.md  astra.service  pixi.toml  pyproject.toml
scripts/astra/src/astra/: __init__.py  cli.py  commands.py  config.py  content.py  listener.py  profiles.py  routing.py  service.py  signals.py  state.py  telegram.py  tg_mock.py  tmux.py  tmux_send.py
scripts/astra/tests/: conftest.py  test_astra.py  test_autofocus.py  test_cli_config.py  test_content_menu.py  test_fire_and_forget.py  test_question_bugs.py  test_service.py  test_session_detection.py  test_simulation.py  test_telegram_client.py  test_tg_mock.py  test_tmux_send.py
scripts/astra/tests/fixtures/menus/: agents_tabbed.txt  idle.txt  model_confirm.txt  model_menu.txt  permission_edit.txt
scripts/astra/tests/sim/: __init__.py  fake_clock.py  fake_telegram.py  fake_tmux.py  harness.py
scripts/tg-hook/: CHANGELOG.md  README.md  pixi.toml  pyproject.toml  tg_hook.py
scripts/tg-hook/src/tg_hook/: __init__.py  cli.py  commands.py  config.py  content.py  listener.py  routing.py  signals.py  state.py  telegram.py  tmux.py
scripts/tg-hook/tests/: test_tg_hook.py
zsh_funcs/: fullpath
