[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra"
version = "0.14.0"
description = "Telegram bridge for Claude Code hooks"
requires-python = ">=3.11"
dependencies = ["requests>=2.28"]

[project.scripts]
astra = "astra.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/astra"]
