[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra"
version = "0.24.2"
description = "Telegram bridge for Claude Code & Gemini CLI hooks"
requires-python = ">=3.11"
dependencies = ["requests>=2.28"]

[project.scripts]
astra = "astra.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/astra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
